hphp/hack/test/typecheck/coeffects/poly_var_reassign/catch.php.exp
File "catch.php", line 8, characters 22-23:
This variable cannot be reassigned because it is used for a dependent context (Typing[4404])
