hphp/hack/test/typecheck/coeffects/poly_var_reassign/catch.php
<?hh

abstract class V { abstract const ctx C; }

function catch_expr(V $v)[$v::C]: void {
  try {
    throw new Exception();
  } catch (Exception $v) {}
}
